--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Coucou voici mon site
+<!doctype html>
+<html>
+  <head>
+    
+  </head>
+  <body>
+    <p>Coucou voici mon site</p>
+  </body>
+  
+</html>
